# myFriend

./: .env.example  .gitignore  CLAUDE.md  DATABASE_SCHEMA.md  README.md  api-docs.html  docker-compose.prod.yml  docker-compose.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  run.py
api/app/: celery_app.py  config.py  main.py
api/app/controllers/: agent_config_controller.py  agent_persona_controller.py  agent_task_controller.py  chat_controller.py  conversation_share_controller.py  dashboard_controller.py  document_controller.py  emotion_controller.py  favorite_controller.py  file_controller.py  health_controller.py  image_controller.py  knowledge_base_controller.py  mcp_controller.py  memory_controller.py  model_config_controller.py  notify_controller.py  persona_group_controller.py  research_controller.py  router.py  search_controller.py  tag_controller.py  tool_controller.py  trace_controller.py
api/app/core/: dependencies.py  exceptions.py  logging.py  request_context.py  response.py  security.py
api/app/db/: backfill_kb.py  elastic.py  migrate.py  neo4j.py  postgres.py  redis.py
api/app/models/: __init__.py  agent_config_model.py  agent_persona_model.py  agent_task_model.py  agent_trace_model.py  conversation_model.py  document_model.py  emotion_model.py  favorite_model.py  group_member_model.py  image_model.py  knowledge_base_model.py  loop_model.py  mcp_server_model.py  memory_correction_model.py  memory_model.py  message_feedback_model.py  (+9 more)
api/eval/: .env.eval.example  README.md  __init__.py  clients.py  eval_config.py  metrics.py  reporters.py  run_eval.py
(+339 files in other folders)
